--- a/PixelPipeGUI.properties
+++ b/PixelPipeGUI.properties
@@ -10,4 +10,6 @@ initial_placement_y=50
 fontsize_overlay=42
 fontsize_values=20
 snapshot_save_dir=/tmp
+cols=2
+rows=2
 lprops_post_load_dump="post dump"
