first attempt to playout frames at a given rate

--- a/PixelPipeGUI.properties
+++ b/PixelPipeGUI.properties
@@ -11,5 +11,11 @@ fontsize_overlay=42
 fontsize_values=20
 snapshot_save_dir=/tmp
 cols=2
-rows=2
+rows=1
+
+fixed_playout_rate=true
+fps=60.0
+
+shm_prefix=/dev/shm
+
 lprops_post_load_dump="post dump"
