--- a/PixelPipeGUI.properties
+++ b/PixelPipeGUI.properties
@@ -10,12 +10,10 @@ initial_placement_y=50
 fontsize_overlay=42
 fontsize_values=20
 snapshot_save_dir=/tmp
-cols=2
-rows=1
-
-fixed_playout_rate=true
+cols=6
+rows=3
+tiles=16
+fixed_playout_rate=false
 fps=60.0
-
 shm_prefix=/dev/shm
-
 lprops_post_load_dump="post dump"
